# PROBONITE

./: .gitattributes  .gitignore  Cargo.toml  README.md  estimator.py  main.c  main.cpp  params_estimator.sage
include/network/: PROBO.hpp  net_io.hpp
include/util/: secparams.hpp
openfhe-pdte/: README.md
openfhe-pdte/src/: CMakeLists.txt  FBootstrapping.cpp  PROBONITE.cpp  Unitest.cpp
packed-PROBONITE/: README.md
packed-PROBONITE/BlindArrayAccess/: BAAcc.cpp  CMakeLists.txt  MultiBAAcc.cpp  notebook.ipynb  serialization.cpp
packed-PROBONITE/BlindArrayAccess/perf/: perf(10,1to50).txt  perf(20,1to50).txt  perf(30,1to50).txt  perf(40,1to50).txt  perf(50,1to50).txt  perf2(10,1to50).txt  perf2(20,1to50).txt  perf2(30,1to50).txt  perf2(40,1to50).txt  perf2(50,1to50).txt
packed-PROBONITE/src/: BAAcc.cpp  CMakeLists.txt  MultiBAAcc.cpp  serialization.cpp  simple-integers-serial.cpp
packed-PROBONITE/src/demoData/: cryptocontext.txt  key-private.txt
src/: FBootstrapping.cpp  PROBOClient.cpp  PROBOServer.cpp  main.rs  net_io.cpp  probonite.rs  test  util.cpp
test/: main  main.cpp  network_functions.cpp  test
tfhe-pdte/: README.md
tfhe-pdte/include/network/: PROBO.hpp
tfhe-pdte/include/util/: Timer.hpp  literal.hpp
tfhe-pdte/src/: FBootstrapping.cpp  PROBOServer.cpp  net_io.cpp  test
tfhe-rs-pdte/: Cargo.toml  README.md  perf
tfhe-rs-pdte/src/: main.rs  probonite.rs  test_probonite.rs
