[package]
name = "tfhe-rs-pdte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tfhe = { version = "0.1.9", features = ["boolean", "shortint", "aarch64-unix"] }
rayon = "1.5"
rand = "0.8"
aligned-vec = "0.5.0"
humantime = "2.1.0"
criterion = "0.4.0"
